# ai-dev-kit

./: .gitignore  README.md
.test/src/skill_test/: dataset.py
databricks-claude-test-project/: README.md  setup.sh
databricks-mcp-app/: README.md  app.yaml  deploy.sh  main.py  pyproject.toml  requirements.txt  test_mcp_connection.py
databricks-mcp-app/client/src/pages/: ProjectPage.tsx
databricks-mcp-app/server/: main.py
databricks-mcp-app/server/db/: models.py
databricks-mcp-app/server/routers/: agent.py
databricks-mcp-app/server/services/: __init__.py  agent.py  databricks_tools.py  storage.py  system_prompt.py
databricks-mcp-server/: README.md  setup.sh
databricks-mcp-server/databricks_mcp_server/: server.py
databricks-skills/: setup_all_uc_tools.py  setup_uc_tools.py
databricks-tools-core/: README.md
databricks-tools-core/databricks_tools_core/agent_bricks/: manager.py
databricks-tools-core/databricks_tools_core/compute/: execution.py
databricks-tools-core/databricks_tools_core/spark_declarative_pipelines/: pipelines.py
databricks-tools-core/databricks_tools_core/sql/sql_utils/: table_stats_collector.py
