[project]
name = "ai-dev-kit-mcp"
version = "0.1.0"
description = "AI Dev Kit MCP Server for Databricks"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "mcp[cli]>=1.14.0",
    "uvicorn>=0.34.0",
    "starlette>=0.37.0",
    "databricks-sdk>=0.81.0",
    "pydantic>=2.0.0",
    "fastmcp>=2.12.0",
    "requests>=2.31.0",
    "sqlglot>=20.0.0",
    "sqlfluff>=3.0.0",
    "litellm>=1.0.0",
    "pymupdf>=1.24.0",
]

[project.scripts]
mcp-server = "server.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server"]
